--- a/Login-spring/src/main/resources/templates/home-page.html
+++ b/Login-spring/src/main/resources/templates/home-page.html
@@ -13,6 +13,7 @@
   <a href="/showMyLoginPage">Login</a>
   <a href="/users">Users</a>
   <a href="/admin">Admin</a>
+<!-- logout -->
 
   <form action="#" th:action="@{/logout}"
         method="POST">
